# CodeMara-Meta-OpenEnv-Hackathon

./: Dockerfile  LICENSE  README.md  __init__.py  baseline.py  graders.py  inference.py  openenv.yaml  pyproject.toml  rubrics.py  tasks.py
.github/workflows/: test.yml
.merge-backup/server-main-prealign/: tasks.py
deployment/: Dockerfile  README.md  __init__.py  baseline.py  client.py  models.py  openenv.yaml  pyproject.toml
deployment/server/: __init__.py  app.py  deployment_environment.py
server/: __init__.py  app.py  env.py  graders.py  models.py  rubrics.py  tasks.py
tests/: test_agents.py
